--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/images/nerdyBinders.jpeg" />
+    <link rel="icon" type="image/svg+xml" href="/images/nerdyBinders.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Needy Binders</title>
   </head>
